@@ -91,6 +91,7 @@ MATROSKA_CFLAGS = @MATROSKA_CFLAGS@
 MATROSKA_LDFLAGS = @MATROSKA_LDFLAGS@
 MINGW_GUIAPP = @MINGW_GUIAPP@
 MINGW_LIBS = @MINGW_LIBS@
+MINGW_PROCESSOR_ARCH = @MINGW_PROCESSOR_ARCH@
 MINGW = @MINGW@
 OGG_LIBS = @OGG_LIBS@
 OPTIMIZATION_CFLAGS = @OPTIMIZATION_CFLAGS@
