@@ -1,6 +1,11 @@
 mkvmergeGUI ICON  "../../share/icons/windows/mkvmergeGUI.ico"
 
-#define wxUSE_NO_MANIFEST 1
+#if defined(MINGW_PROCESSOR_ARCH_AMD64)
+1 RT_MANIFEST "manifest-amd64.xml"
+#else
+# error boom
+1 RT_MANIFEST "manifest-x86.xml"
+#endif
 
 1 VERSIONINFO
  FILEVERSION 6, 6, 0, 0
@@ -27,5 +32,3 @@ BEGIN
     VALUE "Translation", 0x0409, 1252 // Englisch (USA)
   END
 END
-
-1 RT_MANIFEST "manifest.xml"
