@@ -3,6 +3,16 @@ mkvmergeGUI ICON  "../../share/icons/windows/mkvmergeGUI.ico"
 #define wxUSE_NO_MANIFEST 1
 #include "wx/msw/wx.rc"
 
+#if defined(MINGW_PROCESSOR_ARCH_AMD64)
+1 RT_MANIFEST "manifest-amd64.xml"
+
+#else
+# error boom
+# include "wx/msw/wx.rc"
+1 RT_MANIFEST "manifest-x86.xml"
+
+#endif
+
 1 VERSIONINFO
  FILEVERSION 6, 6, 0, 0
  PRODUCTVERSION 6, 6, 0, 0
@@ -28,5 +38,3 @@ BEGIN
     VALUE "Translation", 0x0409, 1252 // Englisch (USA)
   END
 END
-
-1 RT_MANIFEST "manifest.xml"
